--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "date-fns": "^2.30.0",
     "element-plus": "^2.4.2",
     "js-cookie": "^3.0.5",
     "jsencrypt": "^3.3.2",
